3.4/meet/index.md
## Intro

# 

## Host and customize your own high-quality video calling service in minutes

\[[](../assets/videos/meet/meet-demo.mp4)\](https://openvidu.io/3.4/assets/videos/meet/meet-demo.mp4)

[Try OpenVidu Meet Demo](https://meet-demo-app.openvidu.io)

- **Feature-rich for videoconferencing**

  ______________________________________________________________________

  OpenVidu Meet brings all the **features** you expect from a professional video calling solution: HD video, HiFi audio, recording, broadcasting, screen sharing, chat, virtual backgrounds, and more.

- **Integrate right into your app**

  ______________________________________________________________________

  OpenVidu Meet can be used out-of-the-box via web, but it also offers everything you need to **embed it into your existing application**: a web component, a REST API and webhooks.

- **Secure, self-hosted deployments**

  ______________________________________________________________________

  OpenVidu Meet is designed from the ground up to be **self-hosted** on your own servers (AWS and Azure templates also available). It provides the highest level of **privacy and security** for your video calls.

- **Designed for most common use cases**

  ______________________________________________________________________

  OpenVidu Meet perfectly fits most common videoconferencing use cases: **e-learning, telehealth, remote collaboration, customer support**... And you can customize its **branding** to match your organization’s identity.

## Built for all purposes. Customizable for your particular use case.

## Features

**Multi-Party smart layout**

Connect dozens of participants in a room. OpenVidu Meet automatically adapts to provide the best experience.

- **Pre-join view**

  Your users can set up their video/audio devices, virtual background and language before entering the room.

- **Background filters**

  Allow your users to easily replace their video background with a blur effect or an image.

  \[[](../assets/videos/ov-call-vb.mp4)\](https://openvidu.io/3.4/assets/videos/ov-call-vb.mp4)

**Record and share**

OpenVidu Meet offers high-quality recordings and greatly simplifies their storage and access control.

\[[](../assets/videos/meet/share-recording.mp4)\](https://openvidu.io/3.4/assets/videos/meet/share-recording.mp4)

- **Pre-configure your rooms**

  Create and customize the behavior of your rooms in a few clicks: look-and-feel, user permissions, recording, chat and more.

  \[[](../assets/videos/meet/preconfigure-room.mp4)\](https://openvidu.io/3.4/assets/videos/meet/preconfigure-room.mp4)

- **Share room links**

  Unique secure links give access to your rooms with different permission levels.

  \[[](../assets/videos/meet/meet-share-link.mp4)\](https://openvidu.io/3.4/assets/videos/meet/meet-share-link.mp4)

______________________________________________________________________

## With all the features you need to fine-tune your perfect video calling service.

- **One-click video calls**

  ______________________________________________________________________

  Share links to allow users to join video calls. Compatible with any web browser. No installations required.

- **Your own branding**

  ______________________________________________________________________

  Deliver a professional experience by customizing OpenVidu Meet with your own domain, branding colors and logo.

- **Up to 4K video and HiFi audio**

  ______________________________________________________________________

  Up to 4K video resolution, and crisp audio quality with noise cancellation and echo suppression.

- **Recording**

  ______________________________________________________________________

  Record your video calls with different layouts. Manage recording permissions and access with ease.

- **Screen Sharing**

  ______________________________________________________________________

  Screen sharing with the best quality.

- **Background effects**

  ______________________________________________________________________

  Apply effects to your videos, blurring the background or replacing it with an image.

- **Advanced chat**

  ______________________________________________________________________

  OpenVidu Meet integrates an advanced chat with support of rich messages, emojis, reactions and more.

- **Broadcasting**

  ______________________________________________________________________

  OpenVidu Meet allows you to broadcast your video calls to platforms such as YouTube or Twitch.

- **Live Captions**

  ______________________________________________________________________

  Support for a vast number of speech-to-text providers.

- **E2E Encryption**

  ______________________________________________________________________

  Avoid man-in-the-middle attacks: only your final users can decrypt the audio, video and chat messages.

- **Locked rooms**

  ______________________________________________________________________

  Prevent unwanted guests and require administrator approval to join.

- **File sharing**

  ______________________________________________________________________

  Allow participants to share files during calls with a simple drag and drop.

______________________________________________________________________

## Integrations

OpenVidu Meet can be easily integrated with your existing applications and workflows:

**Pre-built web component**

Embed the OpenVidu Meet UI right into your app.

\[[](../assets/videos/meet/embed-html.mp4)\](https://openvidu.io/3.4/assets/videos/meet/embed-html.mp4)

**REST API and webhooks**

Control your meetings from your backend.

```bash
curl --request POST \
    --url https://YOUR_DOMAIN/api/v1/rooms \
    --header 'Accept: application/json' \
    --header 'Content-Type: application/json' \
    --header 'X-API-KEY: YOUR_API_KEY' \
    --data '{"roomName": "my-room"}'
```

______________________________________________________________________

## Deployments

Self-host OpenVidu Meet on your own infrastructure for maximum security and cost-effectiveness. It is easy to deploy, protect, maintain, and scale. No advanced DevOps skills are required to run it in production.

- **On Premises**

  ______________________________________________________________________

  Deploy on your own bare-metal servers

- **AWS**

  ______________________________________________________________________

  Deploy with AWS CloudFormation

- **Azure**

  ______________________________________________________________________

  Deploy with Azure Resource Manager

- **GCP**

  ______________________________________________________________________

  Deploy in GCP with Terraform

## Check out the [**deployment documentation**](https://openvidu.io/3.4/meet/deployment/overview).

______________________________________________________________________

## Use cases

Team meetings

Empower collaboration across your organization with customizable, secure, high-quality video meetings.

- OpenVidu Meet is the perfect tool for **collaborative work**. With its user-friendly interface and powerful features, teams can easily connect, share ideas, and make decisions in real-time.

- **Collaboration tools**

  ______________________________________________________________________

  Screen sharing with top-tier quality, advanced chat with rich features, file sharing and more.

- **Quick access and flexibility**

  ______________________________________________________________________

  One-click join via secure room links. No installation required, full support for any web browser.

- **Custom branding**

  ______________________________________________________________________

  Achieve a professional look and feel with customizable domain, colors and logo.

e-Learning

Deliver a seamless learning experience by embedding OpenVidu Meet in your LMS or e-learning portal using **OpenVidu Meet Embedded**.

- With OpenVidu Meet **instructors** can engage with **students** through high quality video & audio, as well as advanced interactive tools. Locked rooms, breakout groups and many more features to enhance the learning experience.

- **High quality media**

  ______________________________________________________________________

  Up to **4K** video and **HiFi** audio for crystal-clear lessons. Stable experience across all kind of network thanks to **simulcast**, **SVC**, **dynacast** and **adaptive streaming**.

- **Accessibility**

  ______________________________________________________________________

  Live captions and real-time transcriptions. OpenVidu Meet is localized in multiple languages.

- **Persistence and continuity**

  ______________________________________________________________________

  Record and share lessons with multiple layouts. Manage recordings and share via secure links.

Telehealth

The most secure videoconference platform is the one you host on your own servers.

- OpenVidu Meet is the ideal solution for telehealth services. **Practitioners** can conduct remote consultations, share medical documents, and ensure **patient** privacy with end-to-end encryption.

- **Security and privacy**

  ______________________________________________________________________

  End-to-end encryption for audio, video, and chat. Locked rooms and administrator-controlled access. No third-party data routing.

- **Accessibility and trust**

  ______________________________________________________________________

  Browser-based with no installation needed. Live Captions and real-time transcriptions with specific support for medical language models.

- **Communication and clarity**

  ______________________________________________________________________

  Up to 4K and HiFi audio for clear communication between practitioners and patients. File sharing for medical documents and images.

Customer support

Build trust with instant, reliable support through embedded video calls that persist. Right where your clients need it.

- Connecting your **remote assistance** team with your **customers** has never been so easy. OpenVidu Meet provides all the necessary tools for effective communication and collaboration, ensuring a seamless support experience.

- **Ease of access**

  ______________________________________________________________________

  Simple, one-click access via web: embed support rooms directly into your platform.

- **Record assistance**

  ______________________________________________________________________

  Record your customer support meetings and generate transcriptions for future reference.

- **Custom branding**

  ______________________________________________________________________

  Customize the look and feel of your support rooms to match your brand identity.

______________________________________________________________________

## Free open-source edition vs Commercial edition

OpenVidu Meet is available in two editions:

### OpenVidu COMMUNITY

It is completely **open-source and free to use**. It includes all the features you need for your video conferencing solution. Everything listed in the [Features](#features) section is available in OpenVidu Meet COMMUNITY: HD video, HiFi audio, recording, screen sharing, advanced chat, virtual backgrounds, and more.

OpenVidu Meet COMMUNITY is perfect for production deployments with moderate user load. It can be easily deployed on your own servers, and you can customize its branding to match your organization’s identity. If necessary, upgrading to OpenVidu PRO is seamless and non-disruptive.

### OpenVidu PRO

It is OpenVidu's **commercial edition** and requires a license. It is meant for high demanding environments with significant user load. On top of every functional feature available in OpenVidu COMMUNITY, OpenVidu PRO brings **2x performance**, **advanced observability**, **scalability** and **fault tolerance** features. As well as **priority support** from our team of experts.

OpenVidu PRO follows a simple pricing model based on the size of your deployment (number of CPU cores). Check the [OpenVidu pricing page](https://openvidu.io/pricing) for more details.

## You can choose the OpenVidu edition that best fits your needs when [deploying OpenVidu Meet](https://openvidu.io/3.4/meet/deployment/overview).

______________________________________________________________________

## What does it mean that OpenVidu Meet is in BETA?

OpenVidu Meet (v3.4.1) is considered in **BETA**. There may be bugs and its APIs are subject to change. We are actively working on adding new features, improving existing ones, and fixing any issues that arise. Your feedback is invaluable to us during this phase, so please don't hesitate to [reach out](https://openvidu.io/3.4/support/index.md) with any comments or suggestions.

______________________________________________________________________

## Need total control and advanced SDKs to build your custom real-time application? Checkout [**OpenVidu Platform**](https://openvidu.io/3.4/docs)
