3.6.0/meet/index.md
## Intro

# 

## Host and customize your own high-quality video calling service in minutes

\[[](../assets/videos/meet/meet-demo.mp4)\](https://openvidu.io/3.6.0/assets/videos/meet/meet-demo.mp4)

[Try OpenVidu Meet Demo](https://meet-demo-app.openvidu.io)

- **Feature-rich for videoconferencing**

  ______________________________________________________________________

  OpenVidu Meet brings all the **features** you expect from a professional video calling solution: HD video, HiFi audio, recording, screen sharing, chat, virtual backgrounds, and more.

- **Integrate right into your app**

  ______________________________________________________________________

  OpenVidu Meet can be used out-of-the-box via web, but it also offers everything you need to **embed it into your existing application**: a web component, a REST API and webhooks.

- **Secure, self-hosted deployments**

  ______________________________________________________________________

  OpenVidu Meet is designed from the ground up to be **self-hosted** on your own servers (AWS and Azure templates also available). It provides the highest level of **privacy and security** for your video calls.

- **Designed for most common use cases**

  ______________________________________________________________________

  OpenVidu Meet perfectly fits most common videoconferencing use cases: **e-learning, telehealth, remote collaboration, customer support**... And you can customize its **branding** to match your organization’s identity.

## Built for all purposes. Customizable for your particular use case.

## Features

**Multi-Party smart layout**

Connect dozens of participants in a room. OpenVidu Meet automatically adapts to provide the best experience.

- **Pre-join view**

  Your users can set up their video/audio devices, virtual background and language before entering the room.

- **Background filters**

  Allow your users to easily replace their video background with a blur effect or an image.

  \[[](../assets/videos/ov-call-vb.mp4)\](https://openvidu.io/3.6.0/assets/videos/ov-call-vb.mp4)

**Record and share**

OpenVidu Meet offers high-quality recordings and greatly simplifies their storage and access control.

\[[](../assets/videos/meet/share-recording.mp4)\](https://openvidu.io/3.6.0/assets/videos/meet/share-recording.mp4)

- **Pre-configure your rooms**

  Create and customize the behavior of your rooms in a few clicks: look-and-feel, user permissions, recording, chat and more.

  \[[](../assets/videos/meet/preconfigure-room.mp4)\](https://openvidu.io/3.6.0/assets/videos/meet/preconfigure-room.mp4)

- **Share room links**

  Unique secure links give access to your rooms with different permission levels.

  \[[](../assets/videos/meet/meet-share-link.mp4)\](https://openvidu.io/3.6.0/assets/videos/meet/meet-share-link.mp4)

______________________________________________________________________

## With all the features you need to fine-tune your perfect video calling service.

- **One-click video calls**

  ______________________________________________________________________

  Share meeting links so anyone can instantly join your video calls from any browser — no downloads or setup needed.

- **Your own branding**

  ______________________________________________________________________

  Create a professional look by branding OpenVidu Meet with your own domain, and custom colors.

- **Up to 4K video and HiFi audio**

  ______________________________________________________________________

  Enjoy up to 4K video quality and crystal-clear audio enhanced with noise cancellation and echo suppression.

- **Recording**

  ______________________________________________________________________

  Record your video calls in multiple layouts and easily control who can access or manage each recording.

- **Screen Sharing**

  ______________________________________________________________________

  Share your screen in stunning quality for flawless presentations and smooth collaboration every time.

- **Background effects**

  ______________________________________________________________________

  Enhance your videos by blurring backgrounds or replacing them with custom images and effects.

- **Chat**

  ______________________________________________________________________

  Send and receive text messages during your calls for clear communication.

- **E2E Encryption**

  ______________________________________________________________________

  Protect your calls from man-in-the-middle attacks, ensuring only your users can decrypt audio, video, and chat.

- **Live Captions**

  ______________________________________________________________________

  Access a wide range of speech-to-text providers for accurate and flexible real-time transcription.

- **Broadcasting**

  ______________________________________________________________________

  Easily broadcast your video calls live to platforms like YouTube or Twitch, reaching a wider audience directly from OpenVidu Meet.

- **Locked rooms**

  ______________________________________________________________________

  Keep your meetings secure by blocking unwanted guests and requiring moderator approval to join.

- **File sharing**

  ______________________________________________________________________

  Enable participants to share files easily during calls with a simple drag-and-drop feature.

______________________________________________________________________

## Integrations

OpenVidu Meet can be easily integrated with your existing applications and workflows:

**Pre-built web component**

Embed the OpenVidu Meet UI right into your app.

\[[](../assets/videos/meet/embed-html.mp4)\](https://openvidu.io/3.6.0/assets/videos/meet/embed-html.mp4)

**REST API and webhooks**

Control your meetings from your backend.

```bash
curl --request POST \
    --url https://YOUR_DOMAIN/api/v1/rooms \
    --header 'Accept: application/json' \
    --header 'Content-Type: application/json' \
    --header 'X-API-KEY: YOUR_API_KEY' \
    --data '{"roomName": "my-room"}'
```

______________________________________________________________________

## Deployments

Self-host OpenVidu Meet on your own infrastructure for maximum security and cost-effectiveness. It is easy to deploy, protect, maintain, and scale. No advanced DevOps skills are required to run it in production.

- **On Premises**

  ______________________________________________________________________

  Deploy on your own bare-metal servers

- **AWS**

  ______________________________________________________________________

  Deploy with AWS CloudFormation

- **Azure**

  ______________________________________________________________________

  Deploy with Azure Resource Manager

- **GCP**

  ______________________________________________________________________

  Deploy in GCP with Terraform

- **DigitalOcean**

  ______________________________________________________________________

  Deploy in DigitalOcean through the web console or with Terraform CLI

- **Oracle Cloud Infrastructure**

  ______________________________________________________________________

  Deploy in Oracle Cloud Infrastructure through the web console

## Check out the [**deployment documentation**](https://openvidu.io/3.6.0/meet/deployment/overview).

______________________________________________________________________

## Use cases

Team meetings

Empower collaboration across your organization with customizable, secure, high-quality video meetings.

- OpenVidu Meet is the perfect tool for **collaborative work**. With its user-friendly interface and powerful features, teams can easily connect, share ideas, and make decisions in real-time.

- **Collaboration tools**

  ______________________________________________________________________

  Screen sharing with top-tier quality, virtual backgrounds, chat, recording, and more.

- **Quick access and flexibility**

  ______________________________________________________________________

  One-click join via secure room links. No installation required, full support for any web browser.

- **Custom branding**

  ______________________________________________________________________

  Achieve a professional look and feel with customizable domain and colors.

e-Learning

Deliver a seamless learning experience by embedding OpenVidu Meet in your LMS or e-learning portal using **OpenVidu Meet Embedded**.

- With OpenVidu Meet **instructors** can engage with **students** through high quality video & audio, as well as advanced interactive tools. Locked rooms, breakout groups and many more features comming soon to enhance the learning experience.

- **High quality media**

  ______________________________________________________________________

  Up to **4K** video and **HiFi** audio for crystal-clear lessons. Stable experience across all kind of network thanks to **simulcast**, **SVC**, **dynacast** and **adaptive streaming**.

- **Accessibility**

  ______________________________________________________________________

  OpenVidu Meet is localized in multiple languages. Live captions and real-time transcriptions improve accessibility for hearing-impaired users and non-native speakers.

- **Persistence and continuity**

  ______________________________________________________________________

  Record and share lessons with multiple layouts. Manage recordings and share via secure links.

Telehealth

The most secure videoconference platform is the one you host on your own servers.

- OpenVidu Meet is the ideal solution for telehealth services. **Practitioners** can conduct remote consultations, share medical documents, and ensure **patient** privacy with end-to-end encryption.

- **Security and privacy**

  ______________________________________________________________________

  End-to-end encryption for audio, video, and chat. Locked rooms and administrator-controlled access. No third-party data routing.

- **Accessibility and trust**

  ______________________________________________________________________

  Browser-based with no installation needed. Live Captions and real-time transcriptions with specific support for medical language models coming soon.

- **Communication and clarity**

  ______________________________________________________________________

  Up to 4K and HiFi audio for clear communication between practitioners and patients. File sharing for medical documents and images coming soon.

Customer support

Build trust with instant, reliable support through embedded video calls that persist. Right where your clients need it.

- Connecting your **remote assistance** team with your **customers** has never been so easy. OpenVidu Meet provides all the necessary tools for effective communication and collaboration, ensuring a seamless support experience.

- **Ease of access**

  ______________________________________________________________________

  Simple, one-click access via web: embed support rooms directly into your platform.

- **Record assistance**

  ______________________________________________________________________

  Record your customer support meetings and generate transcriptions for future reference.

- **Custom branding**

  ______________________________________________________________________

  Customize the look and feel of your support rooms to match your brand identity.

______________________________________________________________________

## Free open-source edition vs Commercial edition

OpenVidu Meet is available in two editions:

### OpenVidu COMMUNITY

It is completely **open-source and free to use**. It includes all the features you need for your video conferencing solution. Everything listed in the [Features](#features) section is available in OpenVidu Meet COMMUNITY: HD video, HiFi audio, recording, screen sharing, chat, virtual backgrounds, and more.

OpenVidu Meet COMMUNITY is perfect for production deployments with moderate user load. It can be easily deployed on your own servers, and you can customize its branding to match your organization’s identity. If necessary, upgrading to OpenVidu PRO is seamless and non-disruptive.

### OpenVidu PRO

It is OpenVidu's **commercial edition** and requires a license. It is meant for high demanding environments with significant user load. On top of every functional feature available in OpenVidu COMMUNITY, OpenVidu PRO brings **2x performance**, **advanced observability**, **scalability** and **fault tolerance** features. As well as **priority support** from our team of experts.

OpenVidu PRO follows a simple pricing model based on the size of your deployment (number of CPU cores). Check the [OpenVidu pricing page](https://openvidu.io/pricing) for more details.

## You can choose the OpenVidu edition that best fits your needs when [deploying OpenVidu Meet](https://openvidu.io/3.6.0/meet/deployment/overview).

______________________________________________________________________

## What does it mean that OpenVidu Meet is in BETA?

OpenVidu Meet (v3.6.0) is considered in **BETA**. There may be bugs and its APIs are subject to change. We are actively working on adding new features, improving existing ones, and fixing any issues that arise. Your feedback is invaluable to us during this phase, so please don't hesitate to [reach out](https://openvidu.io/3.6.0/support/index.md) with any comments or suggestions.

______________________________________________________________________

## Need total control and advanced SDKs to build your custom real-time application? Checkout [**OpenVidu Platform**](https://openvidu.io/3.6.0/docs)
